--- a/content/resources/sts-002s16.md
+++ b/content/resources/sts-002s16.md
@@ -3,7 +3,7 @@ content_type: resource
 description: '"The Courtyard of the Beurs in Amsterdam," 1653, by Dutch painter Emanuel
   de Witte. This course offers students an introduction to finance through historical
   and social-scientific perspectives. This image is in the public domain.'
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/sts-002-finance-and-society-spring-2016/8d7ef90460c5050b860ee1f1039555c6_sts-002s16.jpg
+file: /media/courses/sts-002-finance-and-society-spring-2016/8d7ef90460c5050b860ee1f1039555c6_sts-002s16.jpg
 file_type: image/jpeg
 image_metadata:
   caption: '"The Courtyard of the Beurs in Amsterdam," 1653, by Dutch painter Emanuel
@@ -12,6 +12,8 @@ image_metadata:
     is in the public domain.)'
   credit: This image is in the public domain.
   image-alt: A painting of a courtyard known as the "Old Exchange" in Amsterdam.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: sts-002s16.jpg
 uid: 8d7ef904-60c5-050b-860e-e1f1039555c6
