Sync all content

--- a/content/resources/sts-002s16.md
+++ b/content/resources/sts-002s16.md
@@ -13,10 +13,10 @@ image_metadata:
   credit: This image is in the public domain.
   image-alt: A painting of a courtyard known as the "Old Exchange" in Amsterdam.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: sts-002s16.jpg
 uid: 8d7ef904-60c5-050b-860e-e1f1039555c6
 ---
 "The Courtyard of the Beurs in Amsterdam," 1653, by Dutch painter Emanuel de Witte. This course offers students an introduction to finance through historical and social-scientific perspectives. This image is in the public domain.
-
