--- a/content/resources/sts-002s16.md
+++ b/content/resources/sts-002s16.md
@@ -4,6 +4,7 @@ description: '"The Courtyard of the Beurs in Amsterdam," 1653, by Dutch painter 
   de Witte. This course offers students an introduction to finance through historical
   and social-scientific perspectives. This image is in the public domain.'
 file: /courses/sts-002-finance-and-society-spring-2016/8d7ef90460c5050b860ee1f1039555c6_sts-002s16.jpg
+file_size: 44188
 file_type: image/jpeg
 image_metadata:
   caption: '"The Courtyard of the Beurs in Amsterdam," 1653, by Dutch painter Emanuel
